Fixed content shifting when there was no browser scrollbar

--- a/public/application.css
+++ b/public/application.css
@@ -1,3 +1,7 @@
+html {
+  overflow-y: scroll;
+}
+
 form.control_button {
   float: left;
   padding-right: 10px;
